--- a/API/package.json
+++ b/API/package.json
@@ -13,8 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "@types/cookie-parser": "^1.4.3",
+    "@types/mongoose": "^3.8.40",
     "@types/node": "^18.15.11",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "moment": "^2.29.4",
     "mongoose": "^7.0.3"
