--- a/API/package.json
+++ b/API/package.json
@@ -13,13 +13,15 @@
   "license": "ISC",
   "dependencies": {
     "@types/cookie-parser": "^1.4.3",
+    "@types/dotenv": "^8.2.0",
     "@types/mongoose": "^3.8.40",
     "@types/node": "^18.15.11",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "moment": "^2.29.4",
-    "mongoose": "^7.0.3"
+    "mongoose": "^7.0.3",
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
