--- a/API/package.json
+++ b/API/package.json
@@ -16,12 +16,14 @@
     "@types/dotenv": "^8.2.0",
     "@types/mongoose": "^3.8.40",
     "@types/node": "^18.15.11",
+    "@types/uuid": "^9.0.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "moment": "^2.29.4",
     "mongoose": "^7.0.3",
-    "url": "^0.11.0"
+    "url": "^0.11.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
