--- a/API/package.json
+++ b/API/package.json
@@ -17,16 +17,20 @@
     "@types/mongoose": "^3.8.40",
     "@types/node": "^18.15.11",
     "@types/uuid": "^9.0.1",
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
     "mongoose": "^7.0.3",
     "url": "^0.11.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.1",
     "typescript": "^5.0.3"
   }
 }
