--- a/API/package.json
+++ b/API/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "ldap": "^0.7.1",
     "moment": "^2.29.4",
     "mongoose": "^7.0.3",
     "url": "^0.11.0",
