yml environment variables changed

--- a/API/docker-compose.yml
+++ b/API/docker-compose.yml
@@ -12,15 +12,15 @@ services:
       - ./data/slapd/database:/var/lib/ldap
       - ./data/slapd/config:/etc/ldap/slapd.d
     environment: 
-      - LDAP_ORGANISATION=ramhlocal
-      - LDAP_DOMAIN=ramhlocal.com
+      - LDAP_ORGANISATION=exovecf
+      - LDAP_DOMAIN=exovecf.com
       - LDAP_ADMIN_USERNAME=admin
       - LDAP_ADMIN_PASSWORD=admin_pass
       - LDAP_CONFIG_PASSWORD=config_pass
-      - "LDAP_BASE_DN=dc=ramhlocal,dc=com"
+      - "LDAP_BASE_DN=dc=exovecf,dc=com"
       - LDAP_TLS_CRT_FILENAME=server.crt
       - LDAP_TLS_KEY_FILENAME=server.key
-      - LDAP_TLS_CA_CRT_FILENAME=ramhlocal.com.ca.crt
+      - LDAP_TLS_CA_CRT_FILENAME=exovecf.com.ca.crt
       - LDAP_READONLY_USER=true
       - LDAP_READONLY_USER_USERNAME=user-ro
       - LDAP_READONLY_USER_PASSWORD=ro_pass
