--- a/API/package.json
+++ b/API/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "start": "node ./dist/index.js"
+    "start": "node ./Dist/index.js"
   },
   "keywords": [],
   "author": "",
