--- a/API/package.json
+++ b/API/package.json
@@ -6,7 +6,9 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
+    "build": "rimraf Dist && tsc",
+    "ts.check": "tsc --project tsconfig.json",
+    "add-build": "git add Dist",
     "start": "node ./Dist/index.js"
   },
   "keywords": [],
@@ -35,5 +37,10 @@
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.1",
     "typescript": "^5.0.3"
-  }
+  },
+  "pre-commit": [
+    "ts.check",
+    "build",
+    "add-build"
+]
 }
