--- a/API/package.json
+++ b/API/package.json
@@ -9,7 +9,7 @@
     "build": "rimraf Dist && tsc",
     "ts.check": "tsc --project tsconfig.json",
     "add-build": "git add Dist",
-    "start": "node ./Dist/index.js"
+    "start": "nodemon src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -36,11 +36,13 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.1",
+    "pre-commit": "^1.2.2",
+    "rimraf": "^5.0.0",
     "typescript": "^5.0.3"
   },
   "pre-commit": [
     "ts.check",
     "build",
     "add-build"
-]
+  ]
 }
