--- a/API/package.json
+++ b/API/package.json
@@ -20,6 +20,7 @@
     "@types/mongoose": "^3.8.40",
     "@types/node": "^18.15.11",
     "@types/uuid": "^9.0.1",
+    "@vercel/node": "^2.13.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
